spockified